0032429: Coding - Warnings during compilation on macosx arm64 with option BUILD_Inspector:BOOL=ON