tools/MessageModel/MessageModel_ItemBase.hxx
@@ -35,7 +35,7 @@ public:
 protected:
 
   //! Initialize the current item. It creates a backup of the specific item information
-  virtual void initItem() const {};
+  virtual void initItem() const Standard_OVERRIDE {};
 
   //! Constructor
   //! param theParent a parent item
