tools/VInspector/VInspector_ItemGraphic3dCLight.hxx
@@ -45,7 +45,7 @@ public:
 
   //! Returns data object of the item.
   //! \return object
-  virtual const Handle(Standard_Transient)& Object() const { initItem(); return myLight; }
+  virtual const Handle(Standard_Transient)& Object() const Standard_OVERRIDE { initItem(); return myLight; }
 
   //! Returns the current light, init item if it was not initialized yet
   //! \return interactive object
