tools/VInspector/VInspector_ItemSelectMgrViewerSelector.hxx
@@ -45,7 +45,7 @@ public:
 
   //! Returns data object of the item.
   //! \return object
-  virtual const Handle(Standard_Transient)& Object() const { initItem(); return myViewerSelector; }
+  virtual const Handle(Standard_Transient)& Object() const Standard_OVERRIDE { initItem(); return myViewerSelector; }
 
   //! Returns the current viewer, init item if it was not initialized yet
   //! \return interactive object
