tools/VInspector/VInspector_ItemV3dViewer.hxx
@@ -45,7 +45,7 @@ public:
 
   //! Returns data object of the item.
   //! \return object
-  virtual const Handle(Standard_Transient)& Object() const { initItem(); return myViewer; }
+  virtual const Handle(Standard_Transient)& Object() const Standard_OVERRIDE { initItem(); return myViewer; }
 
   //! Returns the current viewer, init item if it was not initialized yet
   //! \return interactive object
